compiler/tests/snapshots/parser__ast_from_path@08_assignments.bakugo.snap
---
source: tests/parser.rs
expression: BakugoParsingErrDebug(err)
input_file: tests/examples/ast_error/08_assignments.bakugo
---
  × Parsing error
   ╭─[08_assignments.bakugo:1:1]
 1 │ func main() {
 2 │     a = 3.3, 4;
   ·     ─────┬────
   ·          ╰── Error: Number of expressions on left side (1) does not match the right side (2)
 3 │     a, b = 3.3, "hey", 33;
   ╰────

