compiler/tests/snapshots/parser__decimal_lit-2.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | i32
  | ^---
  |
  = expected IntLit
