compiler/tests/snapshots/parser__decimal_lit-3.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 |  space
  | ^---
  |
  = expected IntLit
