compiler/tests/snapshots/parser__decimal_lit-4.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | (333)
  | ^---
  |
  = expected int_lit
