compiler/tests/snapshots/parser__decimal_lit.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | _43
  | ^---
  |
  = expected IntLit
