compiler/tests/snapshots/parser__identifier-6.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | 9_nope
  | ^---
  |
  = expected ident
