compiler/tests/snapshots/parser__identifier-7.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | (_)43
  | ^---
  |
  = expected ident
