compiler/tests/snapshots/parser__identifier-8.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 |  space
  | ^---
  |
  = expected Ident
