compiler/tests/snapshots/parser__parser@02_sanity.bakugo.snap
---
source: tests/parser.rs
expression: err.to_string()
input_file: tests/examples/02_sanity.bakugo
---
 --> 1:1
  |
1 | backage main
  | ^---
  |
  = expected package
